--- a/student-management-system/src/app/app.component.scss
+++ b/student-management-system/src/app/app.component.scss
@@ -5,3 +5,25 @@
 h1 {
     font-style: italic;
 }
+
+.adult {
+    color: green;
+    font-weight: bold;
+  }
+  
+  .minor {
+    color: red;
+    font-weight: bold;
+  }
+
+.back-red {
+  background-color: yellow;
+}
+
+.back-blue {
+  background-color: rgb(216, 216, 201);
+}
+
+.back-green {
+  background-color: green;
+}
