--- a/student-management-system/src/app/app.component.html
+++ b/student-management-system/src/app/app.component.html
@@ -199,4 +199,9 @@ Structural directives are responsible for HTML layout. They shape or reshape the
 <app-add-student [name]="student1.name"
 [title]="student1.title"
 [mobile]="student1.mobile"
-[email]="student1.email"></app-add-student>
+[email]="student1.email"
+
+
+(buttonClicked)="buttonClickedEventHandler($event)"></app-add-student>
+
+<h2>{{name6}}</h2>
